refactor: fix route clients applications users
